# resume

./: .cookies.json  Cargo.toml  resume-schema.dhall  resume.dhall  resume.json  style.css  test.html
src/: example.rs  from_linkedin.rs  json_resume.rs  main.rs  resumes.rs
src/templates/: template.typ
templates/: basic.typ  template.typ
