[package]
name = "resume"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_typst_intoval = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
typst = "0.14.2"
typst-as-lib = { version = "0.15.1", features = ["reqwest", "typst-kit-embed-fonts"] }
typst-pdf = "0.14.2"
url = { version = "2.5.8", features = ["serde"] }
