[package]
name = "resume"
version = "0.1.0"
edition = "2024"

[features]
serde = []
typst = []
default = [ "typst", "serde"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
derive_typst_intoval = "0.6.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
typst = "0.14.2"
typst-as-lib = { version = "0.15.1", features = ["packages", "reqwest", "typst-kit-embed-fonts", "typst-kit-fonts"] }
typst-bake = "0.1.3"
typst-pdf = "0.14.2"
url = { version = "2.5.8", features = ["serde"] }

[package.metadata.typst-bake]
template-dir = "templates"
fonts-dir = "fonts"
